run_logs/breathflow4_e2e.txt

============================================================
  Factory Pipeline: BreathFlow4
============================================================

[Dispatcher] Executing: Run Pre-Production for BreathFlow4
  Ambition mode: realistic

============================================================
  DriveAI Swarm Factory — Phase 1 Pre-Production Pipeline
============================================================
  Idee:  BreathFlow4
  Run:   #005
  Datum: 2026-03-22
============================================================

[1/6] Memory-Agent: Learnings laden...
      -> # Phase-1 Learnings (aktualisiert nach jedem Durchlauf)

## Trends
- [AI-Generated Content]: Quelle: Durchlauf #001 (EchoMatch Test)


- [Test]: Quelle: Durchlauf #002 (TestIdea)
- [Match-3 & Mobile P

[2/6] Kapitel 1: Research (3 Agents)
      [2a] Trend-Scout startet...
[TrendScout] Searching: mobile game mobile game trends 2025 2026
[TrendScout] Searching: mobile gaming revenue trends 2026
[TrendScout] Searching: mobile game app store trends downloads 2025
[TrendScout] Generating report...
[TrendScout] TheBrain failed (litellm.UnsupportedParamsError: O-series models don't support temperature=0.0. Only temperature=1 is supported. To drop unsupported openai params from the call, set `litellm.drop_params = True`), falling back to Anthropic Sonnet
           -> Trend-Report: 6,868 Zeichen ✓
      [2b] Competitor-Scan startet...
[CompetitorScan] Searching: best mobile game games iOS 2025 2026
[WebResearch] WARNING: Failed to fetch https://www.reddit.com/r/iosgaming/comments/1nly4sb/ive_built_a_continuously_updating_best_mobile/ — 403 Client Error: Blocked for url: https://www.reddit.com/r/iosgaming/comments/1nly4sb/ive_built_a_continuously_updating_best_mobile/
[CompetitorScan] Searching: mobile game games top apps revenue
[WebResearch] WARNING: Failed to fetch https://vgsales.fandom.com/wiki/List_of_highest-grossing_mobile_games — 403 Client Error: Forbidden for url: https://vgsales.fandom.com/wiki/List_of_highest-grossing_mobile_games
[CompetitorScan] Searching: mobile game games monetization battle pass IAP
[WebResearch] WARNING: Failed to fetch https://www.reddit.com/r/gamedev/comments/169yfal/is_there_a_tool_that_helps_me_monetize_with_a/ — 403 Client Error: Blocked for url: https://www.reddit.com/r/gamedev/comments/169yfal/is_there_a_tool_that_helps_me_monetize_with_a/
[CompetitorScan] Generating report...
[CompetitorScan] TheBrain failed (litellm.UnsupportedParamsError: O-series models don't support temperature=0.0. Only temperature=1 is supported. To drop unsupported openai params from the call, set `litellm.drop_params = True`), falling back to Anthropic Sonnet
           -> Competitive-Report: 9,026 Zeichen ✓
      [2c] Audience-Analyst startet...
[AudienceAnalyst] Searching: mobile game mobile game demographics age
[AudienceAnalyst] Searching: mobile gaming spending habits mobile game IAP
[AudienceAnalyst] Searching: mobile game game session length frequency
[WebResearch] WARNING: Failed to fetch https://www.reddit.com/r/gamedev/comments/1bseewc/how_many_sessions_does_the_average_mobile_game/ — 403 Client Error: Blocked for url: https://www.reddit.com/r/gamedev/comments/1bseewc/how_many_sessions_does_the_average_mobile_game/
[AudienceAnalyst] Searching: mobile gaming global market size 2025 2026
[AudienceAnalyst] Generating report...
[AudienceAnalyst] TheBrain failed (litellm.UnsupportedParamsError: O-series models don't support temperature=0.0. Only temperature=1 is supported. To drop unsupported openai params from the call, set `litellm.drop_params = True`), falling back to Anthropic Sonnet
           -> Audience-Profile: 5,089 Zeichen ✓

[3/6] Concept-Analyst: Synthese...
[ConceptAnalyst] Synthesizing Concept Brief from 3 research reports...
[ConceptAnalyst] TheBrain failed (litellm.UnsupportedParamsError: O-series models don't support temperature=0.0. Only temperature=1 is supported. To drop unsupported openai params from the call, set `litellm.drop_params = True`), falling back to Anthropic Sonnet
      -> Concept Brief: 15,979 Zeichen ✓

[4/6] Kapitel 2: Legal & Compliance
      [4a] Legal-Research startet...
[LegalResearch] Searching: app store guidelines in-app purchase rewarded ads 2025
[LegalResearch] Searching: mobile game loot box gambling law EU 2025
[LegalResearch] Searching: AI generated content copyright commercial use 2025
[LegalResearch] Searching: GDPR personalization user data mobile app 2025
[LegalResearch] Searching: mobile game youth protection USK PEGI rating 2025
[LegalResearch] Searching: Minimalistische Atem-Übungs-App trademark app name conflict
[WebResearch] WARNING: Failed to fetch https://www.reddit.com/r/legaladvice/comments/2xe0cw/mobile_application_infringing_trademarkapp_name/ — 403 Client Error: Blocked for url: https://www.reddit.com/r/legaladvice/comments/2xe0cw/mobile_application_infringing_trademarkapp_name/
[LegalResearch] Generating Legal-Research-Report...
[LegalResearch] TheBrain failed (litellm.UnsupportedParamsError: O-series models don't support temperature=0.0. Only temperature=1 is supported. To drop unsupported openai params from the call, set `litellm.drop_params = True`), falling back to Anthropic Sonnet
           -> Legal-Report: 11,121 Zeichen ✓
      [4b] Risk-Assessment startet...
[RiskAssessment] Analyzing risks and generating assessment...
[RiskAssessment] TheBrain failed (litellm.UnsupportedParamsError: O-series models don't support temperature=0.0. Only temperature=1 is supported. To drop unsupported openai params from the call, set `litellm.drop_params = True`), falling back to Anthropic Sonnet
           -> Risk-Assessment: 13,754 Zeichen ✓

[5/6] Reports speichern...
      -> 7 Dateien gespeichert in factory\pre_production\output\005_breathflow4

[6/6] Pipeline abgeschlossen.
      SerpAPI Credits: 16 (Cache-Hits: 0)
[Dispatcher] BreathFlow4: idea_submitted -> pre_production_complete
[Dispatcher] BreathFlow4: pre_production_complete -> ceo_go
[Dispatcher] Executing: Run Market Strategy for BreathFlow4
  Input: C:\Users\Admin\.claude\current-projects\DriveAI-AutoGen\factory\pre_production\output\005_breathflow4
[0/5] Phase-1 Input laden: C:\Users\Admin\.claude\current-projects\DriveAI-AutoGen\factory\pre_production\output\005_breathflow4
  Market Strategy: CEO-Gate Entscheidung nicht gefunden: C:\Users\Admin\.claude\current-projects\DriveAI-AutoGen\factory\pre_production\output\005_breathflow4\ceo_gate_decision.md
[Dispatcher] BreathFlow4: ceo_go -> market_strategy_complete
[Dispatcher] Executing: Run MVP Scope for BreathFlow4
[0/4] Input laden...
  MVP Scope: CEO-Gate Entscheidung nicht gefunden: C:\Users\Admin\.claude\current-projects\DriveAI-AutoGen\factory\pre_production\output\005_breathflow4\ceo_gate_decision.md
[Dispatcher] BreathFlow4: market_strategy_complete -> mvp_scope_complete
[Dispatcher] Executing: Generate CD Roadbook for BreathFlow4
  Input: C:\Users\Admin\.claude\current-projects\DriveAI-AutoGen\factory\pre_production\output\005_breathflow4
============================================================
  DriveAI Swarm Factory — Kapitel 6: Roadbook Assembly
  ★ FINALES KAPITEL DER PRE-PRODUCTION PIPELINE ★
============================================================

[0/2] Input laden...
[InputLoader] Loaded 20/20 reports from 5 chapters, total 434k chars
      -> 20 Reports aus 5 Kapiteln (435k chars) ✓

  Idee:  breathflow4
  Kapitel-6 Run: #005
  Datum: 2026-03-22
============================================================

[1/2] CEO Strategic Roadbook (Agent 22)...
[Kapitel6] TheBrain selected: gemini-2.5-flash (google) for ceo_roadbook
[CEORoadbook] Model: gemini-2.5-flash (google) via TheBrain
[CEORoadbook] Input: 435k chars (all reports)
[CEORoadbook] Generating CEO Strategic Roadbook via gemini/gemini-2.5-flash...
[CEORoadbook] Generated: 20k chars, Cost: $0.0627
      -> 20,787 Zeichen (~20 Seiten) ✓

[2/2] Creative Director Technical Roadbook (Agent 23)...
[Kapitel6] TheBrain selected: gemini-2.5-flash (google) for cd_roadbook
[CDRoadbook] Model: gemini-2.5-flash (google) via TheBrain
[CDRoadbook] Input: 435k chars (all reports)
[CDRoadbook] Generating CD Technical Roadbook via gemini/gemini-2.5-flash...
[CDRoadbook] Generated: 78k chars, Cost: $0.1143
      -> 78,393 Zeichen (~78 Seiten) ✓
      -> Memory aktualisiert ✓

============================================================
  ★ PRE-PRODUCTION PIPELINE ABGESCHLOSSEN ★
============================================================

  CEO Strategic Roadbook:     ~20 Seiten -> fuer CEO + Investoren
  CD Technical Roadbook:      ~78 Seiten -> fuer Creative Director + Lines

  Gesamt-Output dieser Pipeline:
  - 6 Kapitel durchlaufen
  - 24 Agents ausgefuehrt
  - 20+ Reports generiert
  - 15 PDF-Templates verfuegbar
  - 2 Roadbooks kompiliert

  ★ Creative Director kann jetzt die Lines starten ★
============================================================
[Dispatcher] BreathFlow4: mvp_scope_complete -> cd_roadbook_complete
[Dispatcher] BreathFlow4: cd_roadbook_complete -> production_review_pending
[Dispatcher] Executing: Start Production for BreathFlow4
  Error in start_production: unterminated string literal (detected at line 121) (project_creator.py, line 121)
Traceback (most recent call last):
  File "C:\Users\Admin\.claude\current-projects\DriveAI-AutoGen\factory\dispatcher\dispatcher.py", line 219, in _run_action
    from factory.dispatcher.project_creator import ProjectCreator
  File "C:\Users\Admin\.claude\current-projects\DriveAI-AutoGen\factory\dispatcher\project_creator.py", line 121
    'import SwiftUI
    ^
SyntaxError: unterminated string literal (detected at line 121)
[Dispatcher] BreathFlow4: production_review_pending -> failed

[Dispatcher] BreathFlow4: failed
